--- a/src/GraphNodeManagerViewExtension/Controls/ControlColorsAndBrushes.xaml
+++ b/src/GraphNodeManagerViewExtension/Controls/ControlColorsAndBrushes.xaml
@@ -29,19 +29,44 @@
         <Setter Property="SnapsToDevicePixels" Value="True"></Setter>
     </Style>
 
+    <!-- DataGridColumnHeadersPresenter style -->
+    <Style TargetType="{x:Type DataGridColumnHeadersPresenter}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type DataGridColumnHeadersPresenter}">
+                    <Grid>
+                        <ItemsPresenter />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <!-- DataGridColumnHeader style -->
-    <Style x:Key="ColumnHeaderStyle1" TargetType="DataGridColumnHeader">
+    <Style x:Key="ColumnHeaderStyle1" TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="Height" Value="24"/>
         <Setter Property="Background" Value="{StaticResource ExtensionBackgroundColor}"/>
         <Setter Property="Foreground" Value="#bbbbbb"/>
         <Setter Property="BorderThickness" Value="0 0 0 1"></Setter>
         <Setter Property="BorderBrush" Value="{StaticResource BorderColorBrush}"></Setter>
-        <Setter Property="FontSize" Value="11" />
+        <Setter Property="FontSize" Value="12" />
         <Setter Property="Margin" Value="0"/>
         <Setter Property="Padding" Value="6 0"/>
         <Setter Property="UseLayoutRounding" Value="True"></Setter>
         <Setter Property="SnapsToDevicePixels" Value="True"></Setter>
+        
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <Rectangle HorizontalAlignment="Left" Height="11" Width="1" Margin="0,1,5,0" Stroke="#BBBBBB"/>
+                        <TextBlock Text="{Binding}" VerticalAlignment="Center"/>
+                    </StackPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
+
 
     <!-- DataGridRow style -->
     <Style TargetType="DataGridRow" BasedOn="{StaticResource {x:Type DataGridRow}}">
@@ -118,7 +143,7 @@
         <Setter Property="Foreground" Value="{StaticResource DarkThemeBodyMediumBrush}"></Setter> 
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"></Setter>
-        <Setter Property="FontSize" Value="10"></Setter>
+        <Setter Property="FontSize" Value="11"></Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
