--- a/src/GraphNodeManagerViewExtension/Controls/ControlColorsAndBrushes.xaml
+++ b/src/GraphNodeManagerViewExtension/Controls/ControlColorsAndBrushes.xaml
@@ -59,14 +59,18 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                        <Rectangle HorizontalAlignment="Left" Height="11" Width="1" Margin="0,1,5,0" Stroke="#BBBBBB"/>
-                        <TextBlock Text="{Binding}" VerticalAlignment="Center"/>
+                        <Rectangle HorizontalAlignment="Left" Height="11" Width="1" Margin="-1,1,6,3" Stroke="#BBBBBB"/>
+                        <TextBlock Text="{Binding}"  Margin="0, 2, 2, 2"/>
                     </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
+    <!-- DataGridColumnHeader style for the first column header on the left -->
+    <Style x:Key="FirstColumnHeaderStyle1" TargetType="{x:Type DataGridColumnHeader}" BasedOn="{StaticResource ColumnHeaderStyle1}">
+        <Setter Property="Margin" Value="5 0 0 0 "/>
+    </Style>
 
     <!-- DataGridRow style -->
     <Style TargetType="DataGridRow" BasedOn="{StaticResource {x:Type DataGridRow}}">
@@ -85,7 +89,7 @@
                 <Setter Property="Background" Value="#434343"/>
             </Trigger>
             <Trigger Property="IsSelected" Value="True">
-                <Setter Property="Background" Value="#4a4a4a" />
+                <Setter Property="Background" Value="{StaticResource MainBackgroundColor}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -129,8 +133,8 @@
 
     <!-- Image Style -->
     <Style x:Key="ImageStyle" TargetType="Image">
-        <Setter Property="Width" Value="12"></Setter>
-        <Setter Property="Height" Value="12"></Setter>
+        <Setter Property="Width" Value="16"></Setter>
+        <Setter Property="Height" Value="16"></Setter>
         <Setter Property="SnapsToDevicePixels" Value="True"></Setter>
         <Setter Property="UseLayoutRounding" Value="True"></Setter>
         <Setter Property="Margin" Value="3 0"></Setter>
@@ -140,7 +144,7 @@
 
     <!-- Button Style -->
     <Style x:Key="ButtonStyle1" TargetType="{x:Type Button}">
-        <Setter Property="Foreground" Value="{StaticResource DarkThemeBodyMediumBrush}"></Setter> 
+        <Setter Property="Foreground" Value="{StaticResource DarkThemeBodyMediumBrush}"></Setter>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"></Setter>
         <Setter Property="FontSize" Value="11"></Setter>
